[package]
name = "tauri-updater"
version = "0.5.0"
authors = ["Lucas Fernandes Gonçalves Nogueira <lucas@tauri.studio>", "Daniel Thompson-Yvetot <denjell@sfosc.org>", "Tensor Programming <tensordeveloper@gmail.com>"]
license = "MIT"
homepage = "https://tauri.studio"
repository = "https://github.com/tauri-apps/tauri"
description = "Updater for Tauri"
edition = "2018"
exclude = ["test/fixture/**"]

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
# pbr = "1"
serde_json = "1.0"
serde = "1.0"
zip = "0.5.3"
tempdir = "0.3"
error-chain = "0.12.1"
tauri-api = { version = "0.4", path = "../tauri-api" }
tauri-utils = { version = "0.4", path = "../tauri-utils" }
regex = "1.3"
